fixing test-api (not all)
